MTP-1894 fix overflowing hidden legend on fieldset (#962)

--- a/mt-kit/core/css/src/components/_fieldset.scss
+++ b/mt-kit/core/css/src/components/_fieldset.scss
@@ -5,6 +5,7 @@
   min-width: 0;
   padding: 0;
   border: 0;
+
   > * {
     margin-top: var(--form-text-space);
   }
@@ -16,9 +17,10 @@
 
   .mt-legend {
     padding-inline: 0;
+
     &.border {
       font-weight: var(--font-weight-bold);
-      width: 100%;
+      width: fit-content;
       border-bottom: var(--border-width-small) solid $color-secondary;
       padding-bottom: var(--spacer-xx-small);
     }
